@@ -5,6 +5,7 @@ AZUREUS CHANGELOG
 2004.07.xx | Azureus 2.1.0.5
 
 BUGFIX: Core | Throw an error message if existing data file length is too large [Nolar]
+BUGFIX: Core | Fix new bug with tracker announce every 10s when no peers were connected [Nolar]
 
 
 
